// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > renders collapsed by default 1`] = `
<DocumentFragment>
  <div
    class="_header_2e1c09"
    data-component="header"
    id="top"
  >
    <header
      aria-label="Site header"
    >
      <ul
        aria-label="Accessibility links"
        class="_a11yLinks_2e1c09"
      >
        <li>
          <a
            class="_link_7c5f24"
            href="#content-start"
          >
            Skip to content
          </a>
        </li>
        <li>
          <a
            class="_link_7c5f24"
            href="/accessibility"
          >
            Accessibility help
          </a>
        </li>
      </ul>
      <div
        class="_container_2e1c09"
      >
        <a
          aria-label="NICE: National Institute for Health and Care Excellence homepage"
          class="_home_2e1c09"
          href="/"
        >
          <img
            alt=""
            class="_icon_2e1c09"
            height="82"
            src="/assets/ukps-logo.png"
            width="750"
          />
        </a>
        <div
          class="_wrapper_2e1c09"
        >
          <button
            aria-controls="header-menu"
            aria-expanded="false"
            aria-haspopup="menu"
            aria-label="Expand site menu"
            class="_mobileMenuBtn_2e1c09"
            id="header-menu-button"
            type="button"
          >
            Menu
          </button>
        </div>
      </div>
      <div
        class="_wrapper_9cdc15"
        id="header-menu"
      >
        <nav
          aria-label="primary navigation"
          class="_nav_9cdc15"
        >
          <div
            class="_menuWrapper_9cdc15"
          >
            <ul
              aria-labelledby="header-menu-button"
              class="_menuList_12dd76"
            >
              <li>
                <a
                  aria-current="page"
                  class="_link_12dd76"
                  href="/"
                >
                  Home
                </a>
              </li>
            </ul>
          </div>
        </nav>
      </div>
    </header>
  </div>
</DocumentFragment>
`;

exports[`Header > renders expanded after the mobile menu button is clicked 1`] = `
<DocumentFragment>
  <div
    class="_header_2e1c09"
    data-component="header"
    id="top"
  >
    <header
      aria-label="Site header"
    >
      <ul
        aria-label="Accessibility links"
        class="_a11yLinks_2e1c09"
      >
        <li>
          <a
            class="_link_7c5f24"
            href="#content-start"
          >
            Skip to content
          </a>
        </li>
        <li>
          <a
            class="_link_7c5f24"
            href="/accessibility"
          >
            Accessibility help
          </a>
        </li>
      </ul>
      <div
        class="_container_2e1c09"
      >
        <a
          aria-label="NICE: National Institute for Health and Care Excellence homepage"
          class="_home_2e1c09"
          href="/"
        >
          <img
            alt=""
            class="_icon_2e1c09"
            height="82"
            src="/assets/ukps-logo.png"
            width="750"
          />
        </a>
        <div
          class="_wrapper_2e1c09"
        >
          <button
            aria-controls="header-menu"
            aria-expanded="true"
            aria-haspopup="menu"
            aria-label="Close site menu"
            class="_mobileMenuBtn_2e1c09"
            id="header-menu-button"
            type="button"
          >
            Close
          </button>
        </div>
      </div>
      <div
        class="_wrapper_9cdc15 _wrapperExpanded_9cdc15"
        id="header-menu"
      >
        <nav
          aria-label="primary navigation"
          class="_nav_9cdc15"
        >
          <div
            class="_menuWrapper_9cdc15"
          >
            <ul
              aria-labelledby="header-menu-button"
              class="_menuList_12dd76"
            >
              <li>
                <a
                  aria-current="page"
                  class="_link_12dd76"
                  href="/"
                >
                  Home
                </a>
              </li>
            </ul>
          </div>
        </nav>
      </div>
    </header>
  </div>
</DocumentFragment>
`;
